# ArmorDetector

./: .gitignore  ArmorDescriptor.cpp  ArmorDescriptor.h  ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  LightDescriptor.cpp  LightDescriptor.h  Params.h  README.md  main.cpp
